<resources>
    <string name="app_name">LYT</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="MyTask">My Task</string>
    <string name="About">About Us</string>
    <string name="Contact">Contact Us</string>
    <string name="Help">Help</string>
    <string name="logout">Log out</string>
    <string name="SignIn">SignIn</string>
    <string name="drawer_open">Open Navigation Drawer</string>
    <string name="drawer_close">Close Navigation Drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up_text">Don\'t have an account? Sign Up</string>
    <string name="forgot_password_with_question">Forgot your password?</string>
    <string name="loading">Loading..</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="add_photo">Add Photo</string>
    <string name="add_task">Add Task</string>
    <string name="sign_up">SIGN UP</string>
    <string name="choose_profile_pic">Choose Profile Image</string>
    <string name="open_camera">Open camera</string>
    <string name="choose_from_gallery">Choose From gallery</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
</resources>
