<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Black"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/layout_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_35sdp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/White_White"
            android:textSize="@dimen/_25sdp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_8sdp"
            android:layout_marginRight="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_55sdp"
            android:background="@drawable/edittext_border_white_solid"
            android:gravity="center"
            android:hint="@string/email"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:padding="@dimen/_8sdp"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_15sdp" />

        <EditText
            android:id="@+id/etPwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_8sdp"
            android:layout_marginLeft="@dimen/_8sdp"
            android:layout_marginRight="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:background="@drawable/edittext_border_white_solid"
            android:gravity="center"
            android:hint="@string/password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:padding="@dimen/_8sdp"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_15sdp" />

        <TextView
            android:id="@+id/btnLogIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_8sdp"
            android:layout_marginRight="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:background="@drawable/submit_button_border"
            android:gravity="center"
            android:paddingBottom="@dimen/_8sdp"
            android:paddingTop="@dimen/_8sdp"
            android:singleLine="true"
            android:text="@string/login"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_15sdp" />

        <TextView
            android:id="@+id/forgot_password_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginRight="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:gravity="center"
            android:text="@string/forgot_password_with_question"
            android:textColor="@color/White_White"
            android:textSize="@dimen/_15sdp"
            android:visibility="visible" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="@dimen/_18sdp"
        android:layout_height="@dimen/_18sdp"
        android:layout_centerInParent="true"
        android:indeterminateTint="@color/White_White"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/signUp_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/layout_main"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/_15sdp"
        android:gravity="bottom"
        android:text="@string/sign_up_text"
        android:textColor="@color/White_White"
        android:textSize="@dimen/_15sdp" />

</RelativeLayout>