<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/_10sdp"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    android:padding="@dimen/_14sdp"
    android:paddingBottom="@dimen/_10sdp">

    <EditText
        android:id="@+id/title_editText"
        android:layout_width="@dimen/_190sdp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_22sdp"
        android:background="@drawable/edittext_border_white_solid"
        android:gravity="center"
        android:hint="@string/title"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:maxLines="1"
        android:padding="@dimen/_10sdp"
        android:textColor="@android:color/black"
        android:textSize="@dimen/_15sdp" />

    <EditText
        android:id="@+id/description_editText"
        android:layout_width="@dimen/_190sdp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_22sdp"
        android:background="@drawable/edittext_border_white_solid"
        android:gravity="center"
        android:hint="@string/description"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:maxLines="3"
        android:padding="@dimen/_10sdp"
        android:textColor="@android:color/black"
        android:textSize="@dimen/_15sdp" />

    <TextView
        android:id="@+id/submit_tv"
        android:layout_width="@dimen/_190sdp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/_22sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/submit_button_border"
        android:gravity="center"
        android:padding="@dimen/_10sdp"
        android:text="@string/add_task"
        android:textColor="@color/White_White"
        android:textSize="@dimen/_15sdp" />

</LinearLayout>