<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/Black"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/Black"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            </android.support.v7.widget.Toolbar>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/toolbar"
                android:layout_margin="@dimen/_20sdp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/app_name"
                    android:textColor="@color/White_White"
                    android:textSize="@dimen/_25sdp"
                    android:textStyle="bold" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.mikhaellopez.circularimageview.CircularImageView
                        android:id="@+id/circularImageView"
                        android:layout_width="@dimen/_60sdp"
                        android:layout_height="@dimen/_60sdp"
                        android:layout_centerInParent="true"
                        android:layout_margin="@dimen/_8sdp"
                        android:background="@drawable/dummy_profile_pic"
                        app:civ_border="true"
                        app:civ_border_color="@android:color/white"
                        app:civ_border_width="@dimen/_8sdp"
                        app:civ_shadow="true"
                        app:civ_shadow_color="#3f51b5"
                        app:civ_shadow_radius="0" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tv_add_photo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerInParent="true"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:text="@string/add_photo"
                        android:textColor="@color/White_White"
                        android:textSize="@dimen/_15sdp" />

                    <View
                        android:layout_width="wrap_content"
                        android:layout_height="1dp"
                        android:layout_alignLeft="@+id/tv_add_photo"
                        android:layout_alignRight="@+id/tv_add_photo"
                        android:layout_below="@id/tv_add_photo"
                        android:background="@color/White_White"></View>
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_8sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/firstNameETv"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:layout_weight="20"
                        android:background="@drawable/edittext_border_white_solid"
                        android:gravity="center"
                        android:hint="@string/first_name"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:padding="@dimen/_8sdp"
                        android:singleLine="true"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/_15sdp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="top"
                        android:layout_marginLeft="2dp"
                        android:layout_weight="1"
                        android:gravity="top"
                        android:text="*"
                        android:textColor="@color/Red"
                        android:textSize="@dimen/_15sdp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_8sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/lastNameETv"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:layout_weight="20"
                        android:background="@drawable/edittext_border_white_solid"
                        android:gravity="center"
                        android:hint="@string/last_name"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:padding="@dimen/_8sdp"
                        android:singleLine="true"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/_15sdp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="top"
                        android:layout_marginLeft="2dp"
                        android:layout_weight="1"
                        android:gravity="top"
                        android:text="*"
                        android:textColor="@color/Red"
                        android:textSize="@dimen/_15sdp"
                        android:visibility="invisible" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_8sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/emailETv"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:layout_weight="20"
                        android:background="@drawable/edittext_border_white_solid"
                        android:gravity="center"
                        android:hint="@string/email"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress"
                        android:padding="@dimen/_8sdp"
                        android:singleLine="true"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/_15sdp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="top"
                        android:layout_marginLeft="2dp"
                        android:layout_weight="1"
                        android:gravity="top"
                        android:text="*"
                        android:textColor="@color/Red"
                        android:textSize="@dimen/_15sdp"
                        android:visibility="visible" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_8sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/userPasswordETv"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:layout_weight="20"
                        android:background="@drawable/edittext_border_white_solid"
                        android:gravity="center"
                        android:hint="@string/password"
                        android:imeOptions="actionNext"
                        android:inputType="textPassword"
                        android:padding="@dimen/_8sdp"
                        android:singleLine="true"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/_15sdp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="top"
                        android:layout_marginLeft="2dp"
                        android:layout_weight="1"
                        android:gravity="top"
                        android:text="*"
                        android:textColor="@color/Red"
                        android:textSize="@dimen/_15sdp"
                        android:visibility="visible" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_8sdp"
                    android:layout_marginLeft="@dimen/_8sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/userConfirmPasswordETv"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:layout_weight="20"
                        android:background="@drawable/edittext_border_white_solid"
                        android:gravity="center"
                        android:hint="@string/confirm_password"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:padding="@dimen/_8sdp"
                        android:singleLine="true"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/_15sdp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="top"
                        android:layout_marginLeft="2dp"
                        android:layout_weight="1"
                        android:gravity="top"
                        android:text="*"
                        android:textColor="@color/Red"
                        android:textSize="@dimen/_15sdp"
                        android:visibility="visible" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_8sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_signup"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:layout_weight="20"
                        android:background="@drawable/submit_button_border"
                        android:gravity="center"
                        android:padding="@dimen/_8sdp"
                        android:singleLine="true"
                        android:text="@string/sign_up"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/_15sdp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="top"
                        android:layout_marginLeft="2dp"
                        android:layout_weight="1"
                        android:gravity="top"
                        android:text="*"
                        android:textColor="@color/Red"
                        android:textSize="@dimen/_15sdp"
                        android:visibility="invisible" />
                </LinearLayout>

            </LinearLayout>

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="@dimen/_18sdp"
                android:layout_height="@dimen/_18sdp"
                android:layout_centerInParent="true"
                android:visibility="invisible" />

        </RelativeLayout>
    </ScrollView>

</LinearLayout>